メール認証機能、リマインダー機能の追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
-version: '3.8'
+version: "3.8"
+
+volumes:
+  db-volume:
+  maildir: {}
 
 services:
+  mail:
+    image: mailhog/mailhog
+    container_name: rese-mailhog-1
+    ports:
+      - "8025:8025"
+    environment:
+      MH_STORAGE: maildir
+      MH_MAILDIR_PATH: /tmp
+    volumes:
+      - maildir:/tmp
+
   nginx:
     image: nginx:1.21.1
     ports:
@@ -23,8 +38,7 @@ services:
       MYSQL_DATABASE: laravel_db
       MYSQL_USER: laravel_user
       MYSQL_PASSWORD: laravel_pass
-    command:
-      mysqld --default-authentication-plugin=mysql_native_password
+    command: mysqld --default-authentication-plugin=mysql_native_password
     volumes:
       - ./docker/mysql/data:/var/lib/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
